@@ -471,6 +471,9 @@ public class MovieToXbmcNfoConnector {
     }
     else {
       nfonames = MovieModuleManager.MOVIE_SETTINGS.getMovieNfoFilenames();
+      if (movie.isDisc()) {
+        nfonames.add(MovieNfoNaming.DISC_NFO); // add additionally the NFO at disc style location
+      }
     }
     for (MovieNfoNaming name : nfonames) {
       try {
